<resources>
    <string name="app_name">TripJournal</string>
    <string name="edit_text_new_trip">Título del diario</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña (opcional)</string>
    <string name="action_sign_in">Ingresa o regístrate</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">El mail ingresdo es inválido</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">Necesitamos que nos otorgue el permiso para ver sus contactos.</string>

    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>

    <string name="action_settings">Settings</string>
    <string name="action_share" />
    <string name="action_logout">Log out</string>
    <string name="hi">Hola</string>
    <string name="profile_picture">Imagen de perfil</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="my_trips">Mis viajes</string>
    <string name="my_notes">Mis notas</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Título de la nota</string>
    <string name="fecha">Fecha</string>
    <string name="nota">Nota</string>
    <string name="location">Lugar</string>
    <string name="add_note_photo">Añadir imagen</string>
    <string name="save">Guardar</string>
    <string name="from_date">Inicio del Viaje</string>
    <string name="to_date">Fin del viaje</string>
    <string name="cambiar_foto_de_portada">Portada del viaje:</string>
    <string name="labelTitle">Nuevo diario:</string>
    <string name="init_date_text">¿Cuándo inicia su viaje?</string>
    <string name="no_notes_title">Aún no tienes notas para este viaje :(</string>
    <string name="no_notes_text">Crea una apretando en el "+" que esta abajo!</string>
    <string name="no_trips_title">Aún no tienes viajes ingresados :(</string>
    <string name="no_trips_text">Armá la mochila y luego crea uno apretando en el "+" que esta abajo!</string>
</resources>
