<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="utn_frba_mobile.dadm_diario_viajes.fragments.NoteFragment">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <TextView
        android:id="@+id/description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota"
        />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
